objects/Problem__c.object
<CustomObject>
    <fields>
        <fullName>AccountableEntity__c</fullName>
        <formula>AccountableOrganization__r.Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountable Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountableOrganization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Select the organization that will lead the Problem management</description>
        <inlineHelpText>Typically a LoB for offer quality/technical problems, a GSC organization for manufacturing, delivery or external supplier problems, a Front Office Operations for commercial and customer relationship problems, and a Solution Center for customer project.</inlineHelpText>
        <label>Accountable Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 5) OR (1 AND 2 AND 6 AND 8) OR ((3 OR 4) AND 7)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Return Center</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Canceled</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualUserLastmodifiedDate__c</fullName>
        <description>May 2015 Release</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualUserLastmodifiedby__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Updated by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddSymptom__c</fullName>
        <description>Advanced I2P-add symptom to problem</description>
        <formula>HYPERLINK($Label.CLI2PAPR120002+Id+&apos;&amp;&apos; +$Label.CLI2PAPR120005+&apos;=&apos;+$Label.CLI2PAPR120006, &quot;Add Symptom&quot;, &apos;_self&apos;)</formula>
        <label>&lt;Add Symptom&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffectedCommercialReferences__c</fullName>
        <description>Select the affected Commercial References</description>
        <inlineHelpText>Select the affected Commercial References</inlineHelpText>
        <label>Affected Commercial References</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AffectedCustomersforNotification__c</fullName>
        <description>OCT 2015 Release</description>
        <inlineHelpText>Number of customers potentially affected by the Problem. This includes all identifiable customers, whether direct or indirect.</inlineHelpText>
        <label># Customers Potentially Affected</label>
        <summarizedField>ContainmentAction__c.CustomersPotentiallyAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AffectedCustomersforRecovery__c</fullName>
        <description>OCT 2015 Release</description>
        <inlineHelpText>Number of customers who, based on their response to the recovery notice, are affected by the Problem.</inlineHelpText>
        <label># Customers Actually Affected</label>
        <summarizedField>ContainmentAction__c.CustomersActuallyAffected__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AffectedOffer__c</fullName>
        <description>Identify the affected offer lines, families, ranges etc in a simple, human-readable way. this is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>Identify the affected offer lines, families, ranges etc in a simple, human-readable way. this is a PUBLIC FIELD, visible to all users.</inlineHelpText>
        <label>Affected Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffectedProductLines__c</fullName>
        <description>The field will be automatically calculated with the comma-separated codes of all Product Lines in the related list of Commercial References (e.g. &quot;PTFDA, PTFDS, PTACB, IDSEN&quot;)</description>
        <label>Affected Product Lines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffectedSites__c</fullName>
        <description>OCT 2015 Release</description>
        <inlineHelpText>Number of END USER customer sites that require containment of the PRB, as confirmed by affected customers. Each customer may have multiple sites affected. Sites which have been inspected and determined not to be affected by the Problem are not counted.</inlineHelpText>
        <label># Sites Actually Affected</label>
        <summarizedField>ContainmentAction__c.AffectedSites__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Affectedproductsinstallations__c</fullName>
        <description>OCT 2015 Release</description>
        <inlineHelpText>Number of products or installations which are affected by the Problem and, therefore, require containment, as confirmed by affected customers. Products which have been inspected and determined not to be affected by the Problem are not counted here.</inlineHelpText>
        <label># Products Actually Affected</label>
        <summarizedField>ContainmentAction__c.Affectedproductsinstallations__c</summarizedField>
        <summaryFilterItems>
            <field>ContainmentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Containment</value>
        </summaryFilterItems>
        <summaryForeignKey>ContainmentAction__c.RelatedProblem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BusinessRuleLink__c</fullName>
        <formula>Hyperlink(&quot;http://teamwork.schneider-electric.com/seglobalprocesses/I2P/Shared%20Documents/Business%20Rule%20-%20Problem%20Description.doc&quot;,&quot;Business Rule Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Business Rule Link&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CACommentsBySchneiderElectric__c</fullName>
        <description>Advanced I2P-comment to be entered by Schneider Electric for Corrective Actions</description>
        <label>CA Comments by SE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAEffectivenessValidationBySE__c</fullName>
        <description>Advanced I2P - Validation of the effectivness of the corrective plan by Schneider Electric</description>
        <inlineHelpText>Validation of the effectivness of the corrective plan by Schneider Electric</inlineHelpText>
        <label>Correction Validation by SE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAPlanValidationBySE__c</fullName>
        <description>Advanced I2P- Validation of the proposed correction plan by Schneider Electric</description>
        <inlineHelpText>Validation of the proposed correction plan by Schneider Electric</inlineHelpText>
        <label>CA Plan Validation by SE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSQ_Improvement_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Improvement Project</label>
        <referenceTo>CSQ_ImprovementProject__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CauseEffectDiagramTemplate__c</fullName>
        <description>I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink(&quot;http://teamwork.schneider-electric.com/seglobalprocesses/I2P/Shared%20Documents/Cause-Effect%20Diagram%20Template.xls&quot;,&apos;Link to &quot;Cause-Effect diagram&quot; Template&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Cause Effect Diagram Template&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>Select the code type used to identify affected parts</description>
        <inlineHelpText>Select the code type used to identify affected parts</inlineHelpText>
        <label>Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date Code</fullName>
                </value>
                <value>
                    <fullName>Serial Number</fullName>
                </value>
                <value>
                    <fullName>Software Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConclusionsfromDataAnalysis__c</fullName>
        <description>2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <inlineHelpText>Briefly explain which conclusions were drawn from the data analysis</inlineHelpText>
        <label>Conclusions from Data Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContainmentCostInstructions__c</fullName>
        <description>Describe how the containment cost will be handled, who will cover it, how it will be invoiced, contact person etc. This is a PUBLIC FIELD, visible to all users.</description>
        <inlineHelpText>Describe any specific containment cost instructions</inlineHelpText>
        <label>Containment Cost Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostToSolvetheProblem__c</fullName>
        <description>Cost required to contain, correct, and prevent the Problem, excluding field recovery actions (product replacement, service, reworks etc).</description>
        <inlineHelpText>Cost required to contain, correct, and prevent the Problem, excluding customer containment (product replacement, service etc)</inlineHelpText>
        <label>Cost to Solve the Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CostofDoingNothing__c</fullName>
        <description>Cost of doing nothing, e.g. net present value of recurrent cost to address customer complaints</description>
        <inlineHelpText>Cost of leaving the Problem unsolved, e.g. cost of recurrent customer complaints, ongoing product replacement &amp; repairs etc</inlineHelpText>
        <label>Cost of Doing Nothing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountOfCommercialReferenceRecords__c</fullName>
        <description>Total no of Commercial Reference related to a problem</description>
        <label>Count Of Commercial Reference Records</label>
        <summaryForeignKey>CommercialReference__c.Problem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfRelatedSymptoms__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Related Symptoms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency for cost figures below</description>
        <inlineHelpText>Currency for cost figures below</inlineHelpText>
        <label>Currency1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D1_AssessmentColor__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF( ISPICKVAL( D1_Score__c, &apos;1&apos;) || ISPICKVAL( D1_Score__c, &apos;2&apos;), IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemRedColour&quot;, &quot;red&quot;, 25, 25), 

IF( ISPICKVAL( D1_Score__c, &apos;3&apos;) || ISPICKVAL( D1_Score__c, &apos;4&apos;),  IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemYellowColour&quot;, &quot;yellow&quot;, 25, 25), 

IF( ISPICKVAL( D1_Score__c, &apos;5&apos;) ,  IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemGreenColour&quot;, &quot;green&quot;, 25, 25), &apos;&apos;)) )</formula>
        <label>D1 Assessment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D1_AssessmentComments__c</fullName>
        <description>OCT 2015 Release</description>
        <label>D1 Assessment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D1_Score__c</fullName>
        <description>OCT</description>
        <label>D1 Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D2_AssessmentColor__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF( ISPICKVAL( D2_Score__c, &apos;1&apos;) || ISPICKVAL( D2_Score__c, &apos;2&apos;), IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemRedColour&quot;, &quot;red&quot;, 25, 25), 

IF( ISPICKVAL( D2_Score__c, &apos;3&apos;) || ISPICKVAL( D2_Score__c, &apos;4&apos;), IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemYellowColour&quot;, &quot;yellow&quot;, 25, 25), 

IF( ISPICKVAL( D2_Score__c, &apos;5&apos;) , IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemGreenColour&quot;, &quot;green&quot;, 25, 25), &apos;&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D2 Assessment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D2_AssessmentComments__c</fullName>
        <description>OCT 2015 Release</description>
        <label>D2 Assessment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D2_Score__c</fullName>
        <description>OCT 2015 Release</description>
        <label>D2 Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D3_AssessmentColor__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF( ISPICKVAL( D3_Score__c, &apos;1&apos;) || ISPICKVAL( D3_Score__c, &apos;2&apos;), IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemRedColour&quot;, &quot;red&quot;, 25, 25), 

IF( ISPICKVAL( D3_Score__c, &apos;3&apos;) || ISPICKVAL( D3_Score__c, &apos;4&apos;), IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemYellowColour&quot;, &quot;yellow&quot;, 25, 25), 

IF( ISPICKVAL( D3_Score__c, &apos;5&apos;) , IMAGE(IF( TEXT($User.UserType) &lt;&gt; &apos;Standard&apos;, &quot;/ExtranetI2P&quot;, &quot;&quot;) &amp;&quot;/resource/ProblemGreenColour&quot;, &quot;green&quot;, 25, 25), &apos;&apos;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D3 Assessment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D3_AssessmentComments__c</fullName>
        <description>OCT 2015 Release</description>
        <label>D3 Assessment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D3_Score__c</fullName>
        <description>OCT 2015 Release</description>
        <label>D3 Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>Advanced I2P- Supplier DUNS number visible for Supplier only</description>
        <formula>PartnerAccount__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Supplier DUNS number</inlineHelpText>
        <label>DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCollectionTemplate__c</fullName>
        <description>I2P October 2012 Release- IDEA-001255:IMPROVE SUPPORT FOR DATA ANALYSIS AND ROOT CAUSE ANALYSIS</description>
        <formula>Hyperlink(&quot; http://teamwork.schneider-electric.com/seglobalprocesses/I2P/Shared%20Documents/Data%20Collection%20and%20Analysis%20Template.xls&quot;,&apos;Link to &quot;Data Collection &amp; analysis template&quot;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Data Collection Template&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOf8DStart__c</fullName>
        <description>Date when a Problem Leader is appointed and Status of the Problem is set to In Progress</description>
        <inlineHelpText>Date when a Problem Leader is appointed and Status of the Problem is set to In Progress</inlineHelpText>
        <label>Date of 8D Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfClosure__c</fullName>
        <description>Date when Problem is closed</description>
        <inlineHelpText>Date when Problem is closed</inlineHelpText>
        <label>Date of Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfContainment__c</fullName>
        <description>Date when containment is defined and Status of Containment is set to Executing</description>
        <inlineHelpText>Date when containment is defined and Status of Containment is set to Executing</inlineHelpText>
        <label>Date of Containment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfCorrection__c</fullName>
        <description>Date when Status of Correction is set to Completed</description>
        <inlineHelpText>Date when Status of Correction is set to Completed</inlineHelpText>
        <label>Date of Correction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfPrevention__c</fullName>
        <description>Date when Status of Prevention is set to Completed</description>
        <inlineHelpText>Date when Status of Prevention is set to Completed</inlineHelpText>
        <label>Date of Prevention</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfRCACompletion__c</fullName>
        <description>Date when Status of Root Cause Analysis is set to Completed</description>
        <inlineHelpText>Date when Status of Root Cause Analysis is set to Completed</inlineHelpText>
        <label>Date of Operational RCA Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfSystemicRCACompletion__c</fullName>
        <label>Date of Systemic RCA Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_8D_Cycle_Times__c</fullName>
        <description>Date when first discipline is launched</description>
        <formula>IF( ISNULL( DateOf8DStart__c ) , TODAY()  - DateOfContainment__c,  DateOf8DStart__c - DateOfContainment__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date when first discipline is launched</inlineHelpText>
        <label>Date Of 8D Cycle Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateofCAplanvalidationbySE__c</fullName>
        <description>R1 2017 Release. BR-10737</description>
        <label>Date of Corrective plan validation by SE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofPAplanvalidationbySE__c</fullName>
        <description>R1 2017 Release. BR-10737</description>
        <label>Date of Preventive plan validation by SE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofXAplanvalidationbySE__c</fullName>
        <description>R1 2017 Release. BR-10737</description>
        <label>Date of Containment plan validation bySE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofrootcausesvalidationbySE__c</fullName>
        <description>R1 2017 Release. BR-10737</description>
        <label>Date of RCA validation by SE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaystoPrevention__c</fullName>
        <formula>IF(Not(ISBLANK(TECH_FirstPreventiveDate__c)) &amp;&amp; Not(ISBLANK(DateOfRCACompletion__c)),
		TEXT( IF(TECH_FirstPreventiveDate__c &lt;DateOfRCACompletion__c,DateOfRCACompletion__c,TECH_FirstPreventiveDate__c)-DateOf8DStart__c ),
			IF(ISBLANK(TECH_FirstPreventiveDate__c) &amp;&amp; Not(ISBLANK(DateOfRCACompletion__c)),TEXT(DateOfRCACompletion__c-DateOf8DStart__c ),IF(Not(ISBLANK(TECH_FirstPreventiveDate__c)) &amp;&amp; ISBLANK(DateOfRCACompletion__c),TEXT(TECH_FirstPreventiveDate__c-DateOf8DStart__c),&apos;&apos; )))</formula>
        <label>Days to Prevention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveredQuantity__c</fullName>
        <description>Advanced I2P- Identify the delivery quantity to Schneider Electric</description>
        <inlineHelpText>Identify the delivery quantity to Schneider Electric</inlineHelpText>
        <label>Delivered Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetectionOrganization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Advanced I2P- Select the organization that detects the Problem</description>
        <inlineHelpText>Organization that detected and reported the Problem</inlineHelpText>
        <label>Detection  Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 5) OR (1 AND 2 AND 6 AND 8) OR ((3 OR 4) AND 7)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Return Center</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Closed</value>
            </filterItems>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>equals</operation>
                <value>Canceled</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Problems (Detection  Organization)</relationshipLabel>
        <relationshipName>ProblemDetectionOrganization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detection__c</fullName>
        <description>Capability of our processes to detect the Problem before affecting customers</description>
        <inlineHelpText>Capability of our processes to detect the Problem before affecting customers

Almost Certain = 1
High = 3
Moderate = 5
Very Low = 7
Absolute Uncertainty = 10</inlineHelpText>
        <label>Detection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Almost Certain</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Absolute Uncertainty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DoYouWantToOpenRootCause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&lt;Do you agree to re-open&gt;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EstimatedDefectiveRate__c</fullName>
        <description>Advanced I2P - For Quality Problem, assess the defective rate in ppm. For Logistics Problem, assess the defect rate in %.</description>
        <inlineHelpText>For Quality Problem, assess the defective rate in ppm. For Logistics Problem, assess the defect rate in %.</inlineHelpText>
        <label>Estimated Defective Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvaluationDate__c</fullName>
        <description>OCT 2015 Release</description>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
</CustomObject>